tests/e2e/semantics/type_op.error
Error: syntax error in story at line 4, column 5

4|    d = "foo" + a
          ^^^^^^^^^

E0103: `+` between `string` and `int` is not supported.
