tests/e2e/semantics/type_op.story
a = 2 + 3
b = a + 2.5
c = a + b
d = "foo" + a
e = [1,2] / a
